Added music video

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </div>
 
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=rWg5PMm6iKY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=A1a1gFn1Kw0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
     </div>
 
     <div class="hero">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=rWg5PMm6iKY" target="_blank" id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor font-bodega-black" href="https://www.youtube.com/watch?v=A1a1gFn1Kw0" target="_blank" id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
         </div>
     </div>
 
@@ -63,7 +63,7 @@
             <a href="https://music.apple.com/us/artist/red-weather/1499670090" target="_blank"><img src="img/icons/applemusic.png" alt="Red Weather on Apple Music"></a>
         </div>
         <div class="music-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/rWg5PMm6iKY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="music-player">
             <iframe src="https://bandcamp.com/EmbeddedPlayer/album=1768569331/size=large/bgcol=333333/linkcol=9a64ff/artwork=small/transparent=true/" seamless><a href="https://redweather.bandcamp.com/album/wish-you-well">Wish You Well by Red Weather</a></iframe>
