--- a/presskit.html
+++ b/presskit.html
@@ -46,7 +46,7 @@
             <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/rWg5PMm6iKY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
@@ -100,8 +100,8 @@
             <li class="press-photo-list">
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp" alt="Red Weather band members on a couch"></a>
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp" alt="Red Weather band members against a purple wall"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseA.jpg" alt="Red Weather band members against a gray wall"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseB.jpg" alt="Multiple logos for Red Weather Press Usage"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseA.jpg" alt="Red Weather band closeup in a warehouse"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseB.jpg" alt="Red Weather band wide shot in a warehouse"></a>
             </li>
         </div>
 
