--- a/shows.html
+++ b/shows.html
@@ -86,6 +86,19 @@
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-05-18.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Trophy Eyes & Like Pacific @ Scandal's</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> May 18th, 2023<br>
+                <b>Venue:&emsp;</b> Scandal's Live<br>
+                <b>City:&emsp;</b> Virginia Beach, VA<br>
+                <b>Tickets:&emsp;</b> $18 Adv.<br>
+                <b>Buy Tickets:&emsp;</b> <a id="ticket-link" href="https://www.seetickets.us/event/Trophy-EyesatScandalsLive/539094" target="_blank">HERE</a><br>
+                <b>Doors:&emsp;</b> 6:00pm<br>
+            </p>
+        </div>
             
     </div>
 
