--- a/shows.html
+++ b/shows.html
@@ -99,6 +99,18 @@
                 <b>Doors:&emsp;</b> 6:00pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-06-17.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Another One Down & Dear Spring @ The Bike Shop</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> June 17th, 2023<br>
+                <b>Venue:&emsp;</b> The Bike Shop<br>
+                <b>City:&emsp;</b> Richmond, VA<br>
+                <b>Tickets:&emsp;</b> $15<br>
+                <b>Show:&emsp;</b> 7:00pm<br>
+            </p>
+        </div>
             
     </div>
 
