--- a/shows.html
+++ b/shows.html
@@ -75,19 +75,6 @@
         </div> -->
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Space EP 5 Year Anniversary</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> May 12th, 2023<br>
-                <b>Venue:&emsp;</b> Riffhouse Pub<br>
-                <b>City:&emsp;</b> Chesapeake, VA<br>
-                <b>Tickets:&emsp;</b> $12 Adv. / $15 Doors<br>
-                <b>Buy Tickets:&emsp;</b> <a id="ticket-link" href="http://space5years.sametimetmrw.com" target="_blank">HERE</a><br>
-                <b>Doors:&emsp;</b> 7:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-05-18.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Trophy Eyes & Like Pacific @ Scandal's</h3>
             <p class="show-desc">
@@ -117,6 +104,9 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Red Weather Show Flyer May 12, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-04-23.jpg" alt="Red Weather Show Flyer April 23, 2023">
             </div>
