--- a/shows.html
+++ b/shows.html
@@ -75,19 +75,6 @@
         </div> -->
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-05-18.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Trophy Eyes & Like Pacific @ Scandal's</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> May 18th, 2023<br>
-                <b>Venue:&emsp;</b> Scandal's Live<br>
-                <b>City:&emsp;</b> Virginia Beach, VA<br>
-                <b>Tickets:&emsp;</b> $18 Adv.<br>
-                <b>Buy Tickets:&emsp;</b> <a id="ticket-link" href="https://www.seetickets.us/event/Trophy-EyesatScandalsLive/539094" target="_blank">HERE</a><br>
-                <b>Doors:&emsp;</b> 6:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-06-17.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Another One Down & Dear Spring @ The Bike Shop</h3>
             <p class="show-desc">
@@ -104,6 +91,9 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-05-18.jpg" alt="Red Weather Show Flyer May 18, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Red Weather Show Flyer May 12, 2023">
             </div>
