--- a/shows.html
+++ b/shows.html
@@ -85,6 +85,17 @@
                 <b>Show:&emsp;</b> 7:00pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-07-28.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Driving East, Rise Defy, & Red Weather @ Tabol Brewing</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> July 28th, 2023<br>
+                <b>Venue:&emsp;</b> Tabol Brewing<br>
+                <b>City:&emsp;</b> Richmond, VA<br>
+                <b>Show:&emsp;</b> 7:00pm<br>
+            </p>
+        </div>
             
     </div>
 
