--- a/shows.html
+++ b/shows.html
@@ -87,6 +87,30 @@
         </div>
 
         <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-07-13.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Greetings from the East Coast Tour - Chesapeake, VA</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> July 13th, 2023<br>
+                <b>Venue:&emsp;</b> Riffhouse Pub<br>
+                <b>City:&emsp;</b> Chesapeake, VA<br>
+                <b>Tickets:&emsp;</b> $10<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
+            </p>
+        </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-07-14.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Greetings from the East Coast Tour - Woodbridge, VA</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> July 14th, 2023<br>
+                <b>Venue:&emsp;</b> The Moonlight House<br>
+                <b>City:&emsp;</b> Woodbridge, VA<br>
+                <b>Tickets:&emsp;</b> $10<br>
+                <b>Doors:&emsp;</b> 6:30pm<br>
+            </p>
+        </div>
+
+        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-07-28.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Driving East, Rise Defy, & Red Weather @ Tabol Brewing</h3>
             <p class="show-desc">
@@ -94,6 +118,7 @@
                 <b>Venue:&emsp;</b> Tabol Brewing<br>
                 <b>City:&emsp;</b> Richmond, VA<br>
                 <b>Show:&emsp;</b> 7:00pm<br>
+                <b>FREE SHOW</b><br>
             </p>
         </div>
             
