--- a/shows.html
+++ b/shows.html
@@ -75,18 +75,6 @@
         </div> -->
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-06-17.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Another One Down & Dear Spring @ The Bike Shop</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> June 17th, 2023<br>
-                <b>Venue:&emsp;</b> The Bike Shop<br>
-                <b>City:&emsp;</b> Richmond, VA<br>
-                <b>Tickets:&emsp;</b> $15<br>
-                <b>Show:&emsp;</b> 7:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-07-13.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Greetings from the East Coast Tour - Chesapeake, VA</h3>
             <p class="show-desc">
@@ -127,6 +115,9 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-06-17.jpg" alt="Red Weather Show Flyer June 17, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-05-18.jpg" alt="Red Weather Show Flyer May 18, 2023">
             </div>
