--- a/shows.html
+++ b/shows.html
@@ -75,51 +75,6 @@
         </div> -->
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/summer23tourflyer.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Greetings from the East Coast Summer Run</h3>
-            <p class="show-desc">
-                <b>We're hitting the road this summer with <a class="font-bodega-black" style="color: #9c81b6; text-decoration: none;" href="https://floorbird.net" target="_blank">Floorbird</a>!</b>
-            </p>
-        </div>
-
-        <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-07-13.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Greetings from the East Coast - Chesapeake, VA</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> July 13th, 2023<br>
-                <b>Venue:&emsp;</b> Riffhouse Pub<br>
-                <b>City:&emsp;</b> Chesapeake, VA<br>
-                <b>Tickets:&emsp;</b> $10<br>
-                <b>Doors:&emsp;</b> 7:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-07-14.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Greetings from the East Coast - Woodbridge, VA</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> July 14th, 2023<br>
-                <b>Venue:&emsp;</b> The Moonlight House<br>
-                <b>City:&emsp;</b> Woodbridge, VA<br>
-                <b>Tickets:&emsp;</b> $10<br>
-                <b>Doors:&emsp;</b> 6:30pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-07-16.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Greetings from the East Coast - Spring City, PA</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> July 16th, 2023<br>
-                <b>Venue:&emsp;</b> The Gem<br>
-                <b>City:&emsp;</b> Spring City, PA<br>
-                <b>Tickets:&emsp;</b> $10<br>
-                <b>Ticket Link:&emsp;</b> <a style="color: #9c81b6;" href="https://www.thegemspringcity.com/floorbird" target="_blank">Click Here</a><br>
-                <b>Doors:&emsp;</b> 6:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-07-28.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Driving East, Rise Defy, & Red Weather @ Tabol Brewing</h3>
             <p class="show-desc">
@@ -136,6 +91,18 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/summer23tourflyer.jpg" alt="Red Weather Summer Tour 2023">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-07-16.jpg" alt="Red Weather Show Flyer July 16, 2023">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-07-14.jpg" alt="Red Weather Show Flyer July 14, 2023">
+            </div>
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-07-13.jpg" alt="Red Weather Show Flyer July 13, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-06-17.jpg" alt="Red Weather Show Flyer June 17, 2023">
             </div>
