--- a/shows.html
+++ b/shows.html
@@ -56,9 +56,9 @@
         <h1 class="shows-title font-bodega-black">UPCOMING SHOWS</h1>
 
         <!-- UNCOMMENT IF NO UPCOMING SHOWS -->
-        <!-- <div class="show press-width">
+        <div class="show press-width">
             <h2 class="font-bodega-light">More shows coming soon!</h2>
-        </div> -->
+        </div>
         
         <!-- TEMPLATE -->
         <!-- <div class="show press-width">
@@ -73,24 +73,15 @@
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div> -->
-
-        <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-07-28.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Driving East, Rise Defy, & Red Weather @ Tabol Brewing</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> July 28th, 2023<br>
-                <b>Venue:&emsp;</b> Tabol Brewing<br>
-                <b>City:&emsp;</b> Richmond, VA<br>
-                <b>Show:&emsp;</b> 7:00pm<br>
-                <b>FREE SHOW</b><br>
-            </p>
-        </div>
             
     </div>
 
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-07-28.jpg" alt="Red Weather Show Flyer July 27, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/summer23tourflyer.jpg" alt="Red Weather Summer Tour 2023">
             </div>
