--- a/shows.html
+++ b/shows.html
@@ -56,10 +56,14 @@
         <h1 class="shows-title font-bodega-black">UPCOMING SHOWS</h1>
 
         <!-- UNCOMMENT IF NO UPCOMING SHOWS -->
-        <div class="show press-width">
+        <!-- <div class="show press-width">
             <h2 class="font-bodega-light">More shows coming soon!</h2>
+        </div> -->
+
+        <div class="tour-dates" style="width: 100%;">
+            <a href="https://www.songkick.com/artists/370411" class="songkick-widget" data-theme="dark" data-track-button="off" data-detect-style="on" data-background-color="rgb(0,0,0,1)" data-font-color="rgb(255,255,255,1)" data-locale="en" data-other-artists="on" data-share-button="off" data-country-filter="off" data-rsvp="off" data-request-show="off" data-past-events="off" data-past-events-offtour="off" data-remind-me="off">Red Weather Shows</a><script src='//widget-app.songkick.com/injector/370411'></script>
         </div>
-        
+
         <!-- TEMPLATE -->
         <!-- <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Upcoming Red Weather show flyer">
