--- a/shows.html
+++ b/shows.html
@@ -65,18 +65,18 @@
         </div>
 
         <!-- TEMPLATE -->
-        <!-- <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-05-12.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Space EP 5 Year Anniversary</h3>
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-09-27.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Valleyheart, Red Weather & Warrington</h3>
             <p class="show-desc">
-                <b>Date:&emsp;</b> May 12, 2023<br>
-                <b>Venue:&emsp;</b> Riffhouse Pub<br>
-                <b>City:&emsp;</b> Chesapeake, VA<br>
+                <b>Date:&emsp;</b> Sep. 27, 2023<br>
+                <b>Venue:&emsp;</b> Chicho's Backstage<br>
+                <b>City:&emsp;</b> Norfolk, VA<br>
                 <b>Tickets:&emsp;</b> $12 Adv. / $15 Drs.<br>
-                <b>Buy Tickets:</b> <a id="ticket-link" href="http://space5years.sametimetmrw.com">CLICK HERE</a><br>
+                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://www.eventbrite.com/e/valleyheart-red-weather-warrington-tickets-696210031947?aff=rw">CLICK HERE</a><br>
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
-        </div> -->
+        </div>
             
     </div>
 
