--- a/shows.html
+++ b/shows.html
@@ -77,6 +77,16 @@
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-10-13.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">American Television, X'ed Out, Red Weather, & The Nerve Scheme</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> Oct. 13, 2023<br>
+                <b>Venue:&emsp;</b> Norfolk Taphouse<br>
+                <b>City:&emsp;</b> Norfolk, VA<br>
+            </p>
+        </div>
             
     </div>
 
