Added sponsor section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                         <br>Ethan McQuade - Guitar
                     </p>
                 </div>
+                <div class="sponsors">
+                    <p class="sponsor-title font-gimlet-cond-bold">SPONSORED BY</p>
+                    <a href="https://reverendguitars.com/artists/" target="_blank"><img class="sponsor-logo" src="img/rev_logo.png"></a>
+                </div>
             </div>
         </div>
     </div>
