Initial Branch Publish

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=A1a1gFn1Kw0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=A1a1gFn1Kw0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
     </div>
 
     <div class="hero">
@@ -111,7 +111,7 @@
 
     <div class="footer">
         <div class="footer-wrapper">
-            <p class="footer-text">Copyright 2022 Red Weather. All Rights Reserved.</p>
+            <p class="footer-text">Copyright 2022 - 2023 Red Weather. All Rights Reserved.</p>
         </div>
     </div>
 
