--- a/presskit.html
+++ b/presskit.html
@@ -99,7 +99,7 @@
             </div>
             <li class="press-photo-list">
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/hero-photo.webp" alt="Red Weather band members on a couch"></a>
-                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/wall-purple-bg.webp" alt="Red Weather band members against a purple wall"></a>
+                <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/about-photo.webp" alt="Red Weather band members against a purple wall"></a>
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseA.jpg" alt="Red Weather band closeup in a warehouse"></a>
                 <a href="https://drive.google.com/drive/folders/1N0RkvC5DD0El1jJJjiMx455qsWUVazAq?usp=share_link" target="_blank"><img class="photo-thumb" src="img/warehouseB.jpg" alt="Red Weather band wide shot in a warehouse"></a>
             </li>
