Formatting and shows

--- a/presskit.html
+++ b/presskit.html
@@ -46,7 +46,7 @@
             <h2 class="font-bodega-black">Press Kit</h2>
             <img class="press-header-photo" src="img/hero-photo.webp" alt="Photo of Red Weather band members on a couch">
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/M7ID9kfWZuY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="press-header-quotes">
                 <li class="quote">
@@ -81,8 +81,8 @@
         <div class="press-bio press-width">
             <h2 class="font-bodega-black">Bio</h2>
             <p class="font-gimlet-reg">Red Weather formed in 2018, with their members boasting a combined decades of experience in the punk and emo scenes, having played in bands such as Driving East, The Courage Badge, From Rooftops and many others. Their love for the emo and pop punk sounds of the early 2000s drove them to write music reminiscent of the era, citing influences such as Taking Back Sunday, The Get Up Kids, Coheed & Cambria, Thursday and Saosin.</p>
-            <p class="font-gimlet-reg">After honing their craft over the years, Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length – Wish You Well — which released in Fall of 2021 under Revival Recordings distribution.</p>
-            <p class="font-gimlet-reg">Look for new music in 2023!</p>
+            <p class="font-gimlet-reg">Red Weather independently released their debut EP, Empty Places in 2020. With the EP under their belt, they immediately went back to work on their debut full length - Wish You Well - which released in Fall of 2021 under Revival Recordings distribution.</p>
+            <p class="font-gimlet-reg">After the departure of former guitarist Mike McFarland, Tim llardi & Brian Bassette recruited guitarists Chris Cornell and Ethan McQuade to solidify Red Weather's lineup as a 4-piece. Their first single as a quartet, Start Again, released in early 2023 and the band embarked on their first tour run in Summer 2023. The guys are actively working on new music and adding more shows to their resume, having recently played alongside bands like Trophy Eyes, Valleyheart, and Goalkeeper.</p>
             <p class="font-gimlet-reg"><strong class="font-gimlet-cond-bold">Red Weather is:</strong>
                 <br>Tim Ilardi - Vocals/Bass
                 <br>Brian Bassette - Drums
@@ -120,7 +120,7 @@
             <h2 class="font-bodega-black">Videos</h2>
             <div class="all-press-videos">
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/pvM5OBe7rh4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/A1a1gFn1Kw0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="video-container">
                     <iframe src="https://www.youtube.com/embed/q0pIQcSqGx4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
