--- a/shows.html
+++ b/shows.html
@@ -43,12 +43,12 @@
     </div>
     
     <div id="mobile-banner" class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=A1a1gFn1Kw0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+        <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=M7ID9kfWZuY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
     </div>
 
     <div class="shows-banner">
         <div class="banner" style=""> <!-- DELETE INLINE "display: none;" STYLE TO SHOW BANNER -->
-            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=A1a1gFn1Kw0" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "START AGAIN" STREAMING NOW!</p></a>
+            <a class="banner-text-anchor" href="https://www.youtube.com/watch?v=M7ID9kfWZuY" target="_blank"><p id="banner-text" class="banner-text font-bodega-black">NEW SINGLE "TAKE IT BACK" STREAMING NOW!</p></a>
         </div>
     </div>
 
@@ -85,6 +85,19 @@
                 <b>Date:&emsp;</b> Oct. 13, 2023<br>
                 <b>Venue:&emsp;</b> Norfolk Taphouse<br>
                 <b>City:&emsp;</b> Norfolk, VA<br>
+            </p>
+        </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-10-28.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Every Avenue & Red Weather</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> Oct. 28, 2023<br>
+                <b>Venue:&emsp;</b> The Bunker Brewpub<br>
+                <b>City:&emsp;</b> Virginia Beach, VA<br>
+                <b>Tickets:&emsp;</b> $20 Adv. / $25 Drs.<br>
+                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://www.eventbrite.com/e/every-avenue-the-bunker-virginia-beach-tickets-717518185207?aff=ebdssbdestsearch">CLICK HERE</a><br>
+                <b>Doors:&emsp;</b> 6:00pm<br>
             </p>
         </div>
             
