Quick format fixes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="about-text">
             <div class="about-box">
                 <div class="mobile-about-photo">
-                    <img src="img/wall-purple-bg.webp" alt="Red Weather Band Photo">
+                    <img src="img/about-photo.webp" alt="Red Weather Band Photo">
                 </div>
                 <div class="index-social-wrapper">
                     <ul class="index-social-links">
