--- a/shows.html
+++ b/shows.html
@@ -66,25 +66,14 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-09-27.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Valleyheart, Red Weather & Warrington</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> Sep. 27, 2023<br>
-                <b>Venue:&emsp;</b> Chicho's Backstage<br>
-                <b>City:&emsp;</b> Norfolk, VA<br>
-                <b>Tickets:&emsp;</b> $12 Adv. / $15 Drs.<br>
-                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://www.eventbrite.com/e/valleyheart-red-weather-warrington-tickets-696210031947?aff=rw">CLICK HERE</a><br>
-                <b>Doors:&emsp;</b> 7:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-10-13.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">American Television, X'ed Out, Red Weather, & The Nerve Scheme</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b> Oct. 13, 2023<br>
                 <b>Venue:&emsp;</b> Norfolk Taphouse<br>
                 <b>City:&emsp;</b> Norfolk, VA<br>
+                <b>Tickets:&emsp;</b> $10 @ Door<br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
 
@@ -100,12 +89,28 @@
                 <b>Doors:&emsp;</b> 6:00pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-03.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Red Weather & Emensia @ Mona Lisa NYC</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> Nov. 3, 2023<br>
+                <b>Venue:&emsp;</b> Mona Lisa<br>
+                <b>City:&emsp;</b> New York, NY<br>
+                <b>Tickets:&emsp;</b> $15 Adv. / $20 Drs.<br>
+                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://link.dice.fm/e6xKDDD9BDb">CLICK HERE</a><br>
+                <b>Doors:&emsp;</b> 7:00pm<br>
+            </p>
+        </div>
             
     </div>
 
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-09-27.jpg" alt="Red Weather Show Flyer September 27, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-07-28.jpg" alt="Red Weather Show Flyer July 27, 2023">
             </div>
