--- a/shows.html
+++ b/shows.html
@@ -102,6 +102,19 @@
                 <b>Doors:&emsp;</b> 7:00pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-04.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Red Weather & Emensia @ Nostalgia</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> Nov. 3, 2023<br>
+                <b>Venue:&emsp;</b> Nostalgia<br>
+                <b>City:&emsp;</b> Bethpage, NY<br>
+                <b>Tickets:&emsp;</b> $10 Adv. / $12 Drs.<br>
+                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://nostalgiali.com/event/to-each-its-own-red-weather-gaslite-emensia/">CLICK HERE</a><br>
+                <b>Doors:&emsp;</b> 3:30pm<br>
+            </p>
+        </div>
             
     </div>
 
