--- a/shows.html
+++ b/shows.html
@@ -115,6 +115,19 @@
                 <b>Doors:&emsp;</b> 3:30pm<br>
             </p>
         </div>
+
+        <div class="show press-width">
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-05.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Vanish Cap, Red Weather & Emensia</h3>
+            <p class="show-desc">
+                <b>Date:&emsp;</b> Nov. 5, 2023<br>
+                <b>Venue:&emsp;</b> Maxwell's on Main<br>
+                <b>City:&emsp;</b> Doylestown, PA<br>
+                <b>Tickets:&emsp;</b> $10 Adv. / $15 Drs.<br>
+                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://www.eventbrite.com/e/115-vanish-cap-red-weather-emensia-moms-tickets-733452715817?aff=oddtdtcreator&fbclid=IwAR1y0Uj-G3CwgU7E6dGp1MAny0-6fDmUbEjYjRU73Az29VkbO9W6kSn9y6o">CLICK HERE</a><br>
+                <b>Doors:&emsp;</b> 6:00pm<br>
+            </p>
+        </div>
             
     </div>
 
