--- a/shows.html
+++ b/shows.html
@@ -117,7 +117,7 @@
         </div>
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-11-05.jpg" alt="Upcoming Red Weather show flyer">
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-05.png" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Vanish Cap, Red Weather & Emensia</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b> Nov. 5, 2023<br>
