--- a/shows.html
+++ b/shows.html
@@ -66,18 +66,6 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-10-13.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">American Television, X'ed Out, Red Weather, & The Nerve Scheme</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> Oct. 13, 2023<br>
-                <b>Venue:&emsp;</b> Norfolk Taphouse<br>
-                <b>City:&emsp;</b> Norfolk, VA<br>
-                <b>Tickets:&emsp;</b> $10 @ Door<br>
-                <b>Doors:&emsp;</b> 7:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-10-28.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Every Avenue & Red Weather</h3>
             <p class="show-desc">
@@ -134,6 +122,9 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-10-13.jpg" alt="Red Weather Show Flyer October 14, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-09-27.jpg" alt="Red Weather Show Flyer September 27, 2023">
             </div>
