--- a/shows.html
+++ b/shows.html
@@ -105,8 +105,8 @@
         </div>
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-11-05.png" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Vanish Cap, Red Weather & Emensia</h3>
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-05.jpg" alt="Upcoming Red Weather show flyer">
+            <h3 class="show-name">Angel Envy, Red Weather, Emensia, & Mirror Club</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b> Nov. 5, 2023<br>
                 <b>Venue:&emsp;</b> Maxwell's on Main<br>
