--- a/shows.html
+++ b/shows.html
@@ -66,19 +66,6 @@
 
         <!-- TEMPLATE -->
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-10-28.jpg" alt="Upcoming Red Weather show flyer">
-            <h3 class="show-name">Every Avenue & Red Weather</h3>
-            <p class="show-desc">
-                <b>Date:&emsp;</b> Oct. 28, 2023<br>
-                <b>Venue:&emsp;</b> The Bunker Brewpub<br>
-                <b>City:&emsp;</b> Virginia Beach, VA<br>
-                <b>Tickets:&emsp;</b> $20 Adv. / $25 Drs.<br>
-                <b>Buy Tickets:</b> <a id="ticket-link" target="_blank" href="https://www.eventbrite.com/e/every-avenue-the-bunker-virginia-beach-tickets-717518185207?aff=ebdssbdestsearch">CLICK HERE</a><br>
-                <b>Doors:&emsp;</b> 6:00pm<br>
-            </p>
-        </div>
-
-        <div class="show press-width">
             <img class="show-flyer press-header-photo" src="img/shows/23-11-03.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Red Weather & Emensia @ Mona Lisa NYC</h3>
             <p class="show-desc">
@@ -122,6 +109,9 @@
     <div id="past-shows" class="shows-wrapper">
         <h2 class="shows-title font-bodega-black">PAST SHOWS</h2>
         <div class="past-shows-internal-wrapper">
+            <div class="past-show-img">
+                <img class="show-flyer press-header-photo" src="img/shows/23-10-28.jpg" alt="Red Weather Show Flyer October 28, 2023">
+            </div>
             <div class="past-show-img">
                 <img class="show-flyer press-header-photo" src="img/shows/23-10-13.jpg" alt="Red Weather Show Flyer October 14, 2023">
             </div>
