--- a/shows.html
+++ b/shows.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="show press-width">
-            <img class="show-flyer press-header-photo" src="img/shows/23-11-05.jpg" alt="Upcoming Red Weather show flyer">
+            <img class="show-flyer press-header-photo" src="img/shows/23-11-05try2.jpg" alt="Upcoming Red Weather show flyer">
             <h3 class="show-name">Angel Envy, Red Weather, Emensia, & Mirror Club</h3>
             <p class="show-desc">
                 <b>Date:&emsp;</b> Nov. 5, 2023<br>
